feat: add meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React UI Animation</title>
+  <title>UI Experiments | Ahmad Rosid</title>
+
+  <meta name="title" content="UI Experiments | Ahmad Rosid">
+  <meta name="description" content="Some UI pattern I found online that I liked and wanted to try out">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="UI Experiments | Ahmad Rosid">
+  <meta property="og:description" content="Some UI pattern I found online that I liked and wanted to try out">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ui.ahmadrosid.com">
+  <meta property="og:image" content="/og.png">
+  <meta property="og:image:alt" content="My fancy website">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta property="twitter:title" content="UI Experiments | Ahmad Rosid">
+  <meta property="twitter:description" content="Some UI pattern I found online that I liked and wanted to try out">
+  <meta property="twitter:site" content="@_ahmadrosid">
+  <meta property="twitter:creator" content="@_ahmadrosid">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image" content="/og.png">
+  <meta property="twitter:image:alt" content="My fancy website">
 </head>
 
 <body class="bg-gray-900 text-white">
